--- a/src/main/resources/mainPane.fxml
+++ b/src/main/resources/mainPane.fxml
@@ -1,9 +1,13 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
+<?import javafx.geometry.Insets?>
 <?import javafx.scene.canvas.Canvas?>
 <?import javafx.scene.control.Button?>
-<?import javafx.scene.control.ChoiceBox?>
+<?import javafx.scene.control.Label?>
 <?import javafx.scene.control.Separator?>
+<?import javafx.scene.control.Slider?>
+<?import javafx.scene.control.Spinner?>
+<?import javafx.scene.image.ImageView?>
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.layout.HBox?>
 <?import javafx.scene.layout.Pane?>
@@ -19,15 +23,45 @@
                <children>
                   <VBox alignment="CENTER" layoutX="36.0" prefHeight="500.0" prefWidth="200.0">
                      <children>
-                        <ChoiceBox fx:id="choicebox" prefWidth="150.0" />
+                        <Label text="wsp światła otoczenia" />
+                        <Slider fx:id="ka" max="1.0" showTickLabels="true" value="0.5" />
                         <Separator prefWidth="200.0" />
+                        <Label text="wsp światła rozproszonego" />
+                        <Slider fx:id="kd" max="1.0" showTickLabels="true" value="0.5" />
                         <Separator prefWidth="200.0" />
-                        <VBox />
-                        <Button fx:id="generate" mnemonicParsing="false" onAction="#generateCanvas" text="Generate" />
-                        <HBox alignment="CENTER" prefHeight="100.0" prefWidth="200.0">
+                        <Label text="wsp światła odbitego" />
+                        <Slider fx:id="ks" max="1.0" showTickLabels="true" value="0.5" />
+                        <Separator prefWidth="200.0" />
+                        <Label text="wsp gładkości powierzchni" />
+                        <Spinner fx:id="n" editable="true">
+                           <VBox.margin>
+                              <Insets bottom="7.0" />
+                           </VBox.margin>
+                        </Spinner>
+                        <Separator prefWidth="200.0" />
+                        <Label text="liczba wątków" />
+                        <Spinner fx:id="threadsN" editable="true">
+                           <VBox.margin>
+                              <Insets bottom="7.0" />
+                           </VBox.margin>
+                        </Spinner>
+                        <Button mnemonicParsing="false" onAction="#generateCanvas" text="Generate">
+                           <VBox.margin>
+                              <Insets bottom="20.0" top="20.0" />
+                           </VBox.margin></Button>
+                        <HBox alignment="CENTER">
                            <children>
-                              <Button fx:id="left" mnemonicParsing="false" onAction="#rotateLightLeft" text="Left" />
-                              <Button fx:id="right" mnemonicParsing="false" onAction="#rotateLightRight" text="Right" />
+                              <Label text="Time [ms]: " />
+                              <Label fx:id="time" text="0" />
+                           </children>
+                           <VBox.margin>
+                              <Insets bottom="20.0" />
+                           </VBox.margin>
+                        </HBox>
+                        <HBox alignment="CENTER">
+                           <children>
+                              <Button mnemonicParsing="false" onAction="#rotateLightLeft" text="Left" />
+                              <Button mnemonicParsing="false" onAction="#rotateLightRight" text="Right" />
                            </children>
                         </HBox>
                      </children>
@@ -36,5 +70,6 @@
             </AnchorPane>
          </children>
       </AnchorPane>
+      <ImageView fitHeight="150.0" fitWidth="200.0" layoutX="-234.0" layoutY="-197.0" pickOnBounds="true" preserveRatio="true" />
    </children>
 </Pane>
