--- a/src/main/resources/mainPane.fxml
+++ b/src/main/resources/mainPane.fxml
@@ -7,69 +7,68 @@
 <?import javafx.scene.control.Separator?>
 <?import javafx.scene.control.Slider?>
 <?import javafx.scene.control.Spinner?>
-<?import javafx.scene.image.ImageView?>
-<?import javafx.scene.layout.AnchorPane?>
+<?import javafx.scene.layout.BorderPane?>
 <?import javafx.scene.layout.HBox?>
 <?import javafx.scene.layout.Pane?>
 <?import javafx.scene.layout.VBox?>
 
-<Pane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="500.0" prefWidth="750.0" scaleShape="false" xmlns="http://javafx.com/javafx/18" xmlns:fx="http://javafx.com/fxml/1" fx:controller="pl.edu.pw.controller.Controller">
+<Pane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" scaleShape="false" xmlns="http://javafx.com/javafx/18" xmlns:fx="http://javafx.com/fxml/1" fx:controller="pl.edu.pw.controller.Controller">
    <children>
-    <AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="0.0" minWidth="0.0" prefHeight="495.0" prefWidth="392.0">
-         <children>
-            <Canvas fx:id="canvas" height="500.0" width="500.0" />
-            <Separator layoutX="500.0" orientation="VERTICAL" prefHeight="498.0" prefWidth="0.0" />
-          <AnchorPane layoutX="502.0" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="0.0" minWidth="0.0" prefHeight="498.0" prefWidth="250.0">
+      <BorderPane prefHeight="200.0" prefWidth="200.0">
+         <center>
+            <Canvas fx:id="canvas" height="700.0" width="700.0" BorderPane.alignment="CENTER" />
+         </center>
+         <right>
+            <VBox alignment="CENTER" prefHeight="500.0" prefWidth="200.0" BorderPane.alignment="CENTER">
                <children>
-                  <VBox alignment="CENTER" layoutX="36.0" prefHeight="500.0" prefWidth="200.0">
+                  <Label text="wsp światła otoczenia" />
+                  <Slider fx:id="ka" max="1.0" showTickLabels="true" value="0.5" />
+                  <Separator prefWidth="200.0" />
+                  <Label text="wsp światła rozproszonego" />
+                  <Slider fx:id="kd" max="1.0" showTickLabels="true" value="0.5" />
+                  <Separator prefWidth="200.0" />
+                  <Label text="wsp światła odbitego" />
+                  <Slider fx:id="ks" max="1.0" showTickLabels="true" value="0.5" />
+                  <Separator prefWidth="200.0" />
+                  <Label text="wsp gładkości powierzchni" />
+                  <Spinner fx:id="n" editable="true">
+                     <VBox.margin>
+                        <Insets bottom="7.0" />
+                     </VBox.margin>
+                  </Spinner>
+                  <Separator prefWidth="200.0" />
+                  <Label text="liczba wątków" />
+                  <Spinner fx:id="threadsN" editable="true">
+                     <VBox.margin>
+                        <Insets bottom="7.0" />
+                     </VBox.margin>
+                  </Spinner>
+                  <Button mnemonicParsing="false" onAction="#generateCanvas" text="Generate">
+                     <VBox.margin>
+                        <Insets bottom="20.0" top="20.0" />
+                     </VBox.margin>
+                  </Button>
+                  <HBox alignment="CENTER">
                      <children>
-                        <Label text="wsp światła otoczenia" />
-                        <Slider fx:id="ka" max="1.0" showTickLabels="true" value="0.5" />
-                        <Separator prefWidth="200.0" />
-                        <Label text="wsp światła rozproszonego" />
-                        <Slider fx:id="kd" max="1.0" showTickLabels="true" value="0.5" />
-                        <Separator prefWidth="200.0" />
-                        <Label text="wsp światła odbitego" />
-                        <Slider fx:id="ks" max="1.0" showTickLabels="true" value="0.5" />
-                        <Separator prefWidth="200.0" />
-                        <Label text="wsp gładkości powierzchni" />
-                        <Spinner fx:id="n" editable="true">
-                           <VBox.margin>
-                              <Insets bottom="7.0" />
-                           </VBox.margin>
-                        </Spinner>
-                        <Separator prefWidth="200.0" />
-                        <Label text="liczba wątków" />
-                        <Spinner fx:id="threadsN" editable="true">
-                           <VBox.margin>
-                              <Insets bottom="7.0" />
-                           </VBox.margin>
-                        </Spinner>
-                        <Button mnemonicParsing="false" onAction="#generateCanvas" text="Generate">
-                           <VBox.margin>
-                              <Insets bottom="20.0" top="20.0" />
-                           </VBox.margin></Button>
-                        <HBox alignment="CENTER">
-                           <children>
-                              <Label text="Time [ms]: " />
-                              <Label fx:id="time" text="0" />
-                           </children>
-                           <VBox.margin>
-                              <Insets bottom="20.0" />
-                           </VBox.margin>
-                        </HBox>
-                        <HBox alignment="CENTER">
-                           <children>
-                              <Button mnemonicParsing="false" onAction="#rotateLightLeft" text="Left" />
-                              <Button mnemonicParsing="false" onAction="#rotateLightRight" text="Right" />
-                           </children>
-                        </HBox>
+                        <Label text="Time [ms]: " />
+                        <Label fx:id="time" text="0" />
                      </children>
-                  </VBox>
+                     <VBox.margin>
+                        <Insets bottom="20.0" />
+                     </VBox.margin>
+                  </HBox>
+                  <HBox alignment="CENTER">
+                     <children>
+                        <Button mnemonicParsing="false" onAction="#rotateLightLeft" text="Left" />
+                        <Button mnemonicParsing="false" onAction="#rotateLightRight" text="Right" />
+                     </children>
+                  </HBox>
                </children>
-            </AnchorPane>
-         </children>
-      </AnchorPane>
-      <ImageView fitHeight="150.0" fitWidth="200.0" layoutX="-234.0" layoutY="-197.0" pickOnBounds="true" preserveRatio="true" />
+               <BorderPane.margin>
+                  <Insets left="20.0" right="20.0" />
+               </BorderPane.margin>
+            </VBox>
+         </right>
+      </BorderPane>
    </children>
 </Pane>
